[package]
name = "hyproxy"
version = "0.11.2"
edition = "2021"
description = "Proxy helpers for hyper services"
license = "MIT"
repository = "https://github.com/alexrudy/hyproxy"
documentation = "https://docs.rs/hyproxy"
rust-version = "1.85"
readme = "README.md"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
categories = ["network-programming", "web-programming::http-server"]
keywords = ["hyper", "http", "server", "async"]


[dependencies]
chateau = { version = "0.2" }
hyperdriver = { version = "0.12", features = ["stream"] }
http = "1.4.0"
thiserror = "2.0.12"
tracing = "0.1.43"
tower = "0.5.2"
tokio = { version = "1", features = ["macros"] }
pin-project-lite = "0.2.16"
hyper = "1.8.1"
nom = "7.1.3"
bytes = "1.11.0"
